--- a/config.env
+++ b/config.env
@@ -2,3 +2,5 @@ NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://fithaashraf172:<PASSWORD>@cluster0.nyhw4dc.mongodb.net/Natour?retryWrites=true
 DATABASE_PASSWORD=fitha17f
+JWT_SECRET=my-ultra-secure-and-long-secret-key
+JWT_EXPIRES_IN=90d
