--- a/config.env
+++ b/config.env
@@ -4,3 +4,9 @@ DATABASE=mongodb+srv://fithaashraf172:<PASSWORD>@cluster0.nyhw4dc.mongodb.net/Na
 DATABASE_PASSWORD=fitha17f
 JWT_SECRET=my-ultra-secure-and-long-secret-key
 JWT_EXPIRES_IN=90d
+
+
+EMAIL_USERNAME=63c857a82ff920
+EMAIL_PASSWORD=b54f59df3c752c
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_POST=25
