updating password api

--- a/config.env
+++ b/config.env
@@ -4,6 +4,7 @@ DATABASE=mongodb+srv://fithaashraf172:<PASSWORD>@cluster0.nyhw4dc.mongodb.net/Na
 DATABASE_PASSWORD=fitha17f
 JWT_SECRET=my-ultra-secure-and-long-secret-key
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
 
 EMAIL_USERNAME=63c857a82ff920
